unicard_types_macro/tests/ui/struct_normal_test.stderr
error[E0277]: the trait bound `*const i32: WasmType` is not satisfied
 --> tests/ui/struct_normal_test.rs:8:12
  |
8 |     inner: *const i32
  |            ^ the trait `WasmType` is not implemented for `*const i32`
  |
  = help: the trait `WasmType` is implemented for `i32`

error[E0277]: the trait bound `*const i32: WasmType` is not satisfied
 --> tests/ui/struct_normal_test.rs:8:5
  |
8 |     inner: *const i32
  |     ^^^^^^^-
  |     |      |
  |     |      required by a bound introduced by this call
  |     the trait `WasmType` is not implemented for `*const i32`
  |
  = help: the trait `WasmType` is implemented for `i32`
